--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^8.2.1",
+    "firebase-admin": "^9.4.2",
     "next": "10.0.3",
+    "nookies": "^2.5.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
