--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.2",
+    "@chakra-ui/react": "1.0.4",
+    "@emotion/react": "11.1.2",
+    "@emotion/styled": "11.0.0",
     "firebase": "^8.2.1",
     "firebase-admin": "^9.4.2",
+    "framer-motion": "^3.1.1",
     "next": "10.0.3",
+    "next-nprogress": "^1.4.0",
     "nookies": "^2.5.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-icons": "^4.1.0"
   }
 }
